# GEasy

./: .gitignore  Class1.cs  Geasy.sln  README.md  build.sh  run.sh  test.sh
Geasy/: Class1.cs  ClosestPair.cs  ConvexHull.cs  ILineSegment2d.cs  IPoint2d.cs  IVector2d.cs  LineSegment2dFloat.cs  NativeLibrary.cs  Point2d.cs  Point2dFloat.cs  Point2d_Impl.cs  PointInPolygon.cs  README.md  Vector2dFloat.cs
Geasy.Tests/: ClosestPair_UnitTest.cs  ConvexHull_UnitTest.cs  Geasy.Tests.csproj  HelperFunc.cs  LineSegment2d_UnitTest.cs  Point2d_UnitTest.cs  PointInPolygon_UnitTest.cs  UnitTest1.cs  Vector2d_UnitTest.cs
Geasy/geasy_cpp/: .clang-format  CMakeLists.txt  README.md  custom_assert.h  geasy.cpp  geasy.h  geasy_api.cpp  geasy_api.h  ipoint2d.h  ivector2d.h  pnpoly_strategy.cpp  pnpoly_strategy.h  point2d_float.cpp  point2d_float.h  segment2d_float.cpp  segment2d_float.h  unittests.cpp  vector2d_float.cpp  vector2d_float.h
Geasy/geasy_cpp/closest_pair/: closest_pair.cpp  closest_pair.h  closest_pair_strategy.cpp  closest_pair_strategy.h  iclosest_pair_strategy.h
Geasy/geasy_cpp/convex_hull/: convex_hull.cpp  convex_hull.h  convex_hull_strategy.cpp  convex_hull_strategy.h  iconvex_hull_strategy.h
Geasy/geasy_cpp/pnpoly/: ipnpoly_strategy.h  pnpoly.cpp  pnpoly.h  pnpoly_strategy.cpp
GeasyRunner/: GeasyRunner.csproj  Program.cs
